# easy_steps

./: .env.example  .gitignore  Caddyfile  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/routes/: admin.py  bothelp_webhook.py  health.py  invite.py  lava_webhook.py  pay_redirect.py  payments.py
app/bots/access_bot/: bot.py  handlers.py  webhook.py
app/core/: config.py  logging.py  security.py  time.py
app/db/: base.py  models.py  repo.py  session.py
app/services/: bothelp_api.py  entitlements.py  google_sheets.py  lava.py  lava_api.py  telegram_access.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_add_pending_invoices.py  0003_add_expiry_notified_days.py  0004_add_bothelp_subscriber_id.py  0005_drop_allowed_to_join_until.py  0006_add_duration_days_and_3h_notify.py  0006_add_entitlement_duration_days.py  0007_add_expiry_notified_10h_after_at.py  0007_add_expiry_notified_3h_at.py  0008_add_cuid_firstname_to_pending.py  0009_add_post_expiry_1w_30d_fields.py  0010_add_ref_to_pending_invoices.py  0011_replace_post_expiry_columns.py
tests/: conftest.py  test_entitlements.py  test_payments_create.py  test_payments_plan.py
